[package]
name = "talk2web3-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.3.3"
axum = "0.6.20"
dotenv = "0.15"
ethers = "2.0"
eyre = "0.6.8"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
zksync = { git = "https://github.com/matter-labs/zksync", version = "0.3.0" }
